@@ -104,6 +104,9 @@ Release 0.9.2
 - add init plugin to check for pending authorization
 - add new settings 'resultListProductFilter' and 'resultListProductSorter' to
   allow to configure filter and sorter
+- replace ZMSearch with ZMSearchCriteria in preparation for a replacement of
+  zen-cart's search code (refactored to fit into the updated result list
+	system); required template changes to advanced_search.php
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
